tests/snapshots/snapshot__type_errors@missing_fields.roto.snap
---
source: tests/snapshot.rs
expression: string
input_file: tests/scripts/type_errors/missing_fields.roto
---
Error: Type error: field mismatch: missing fields `b` and `c` in record literal
   ╭─[ tests/scripts/type_errors/missing_fields.roto:4:10 ]
   │
 4 │ ╭─▶     let a = Foo {
   ┆ ┆   
 6 │ │          d: 9,
   │ │          ┬  
   │ │          ╰── invalid field
 7 │ │          a: 10,
   │ │          ┬  
   │ │          ╰── duplicate field
 8 │ │          blabla: 11,
   │ │          ───┬──  
   │ │             ╰──── invalid field
 9 │ ├─▶     };
   │ │            
   │ ╰──────────── field mismatch: missing fields `b` and `c` in record literal
───╯
